--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,36 @@ h2{
     text-decoration: underline;
 }
 body{
+   background-image: url("https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max");
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: burlywood;
+
+}
+ul{
+    list-style-type: circle;
+}
+
+ul{
+    list-style-type: square;
+}
+
+ol{
+    list-style-type: upper-roman;
+}
+
+.serif{
+    font-family: "Times New Roman",Times,Serif;
+}
+table, th, td{
+    border: 1px solid black;
+}
+a:link {
+    color: crimson;
+}
+a:visited {
+    color: blue;
+}
+a:hover{
+    color: aqua;
 }
