--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -1,9 +1,41 @@
 .fancy-header{
-color: white;
+    color: white;
     text-align: center;
 }
 
 h1{
     text-align: center;
     color: white;
+}
+body{
+    background: darkgreen;
+    background-image: url("../img/coming-soon.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;
+    height: auto;
+}
+h3{
+    color: white;
+}
+p{
+    color: white;
+    text-align: center;
+
+}
+footer{
+    color: white;
+    width: 100%;
+    height: 60px;
+    bottom: 0;
+    position: fixed;
+    padding: 10px 10px 0px 10px;
+}
+hr{
+    width: 20%;
+    text-align: center;
+    size: 5px;
+}
+span{
+    text-decoration: underline;
 }
