--- a/css/login.css
+++ b/css/login.css
@@ -11,8 +11,11 @@ body, html {
 }
 
 form {
+    margin: 1em;
+    padding: 1em;
     /* This form should be separated from other elements by 1em */
     /* There must be 1em between the content and the border of this element */
+
 }
 
 fieldset {
@@ -22,42 +25,64 @@ fieldset {
     /* There must be 1em between the content and the border of this element */
     /* It should have no border */
     /* Its background should be white */
+    background-color: white;
+    padding: 1em;
 }
 
 .width-80 {
+    width: 80%;
+    text-align: center;
+    margin: auto;
     /* The element with this class should 80% of the width and it must be centered */
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
 }
 
 .form-group {
+   width: 100%;
+    padding-top: .5em ;
+    padding-bottom: .5em;
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
 }
 
 .form-label {
+   font-weight: bold;
     /* The text of a label must be bold */
 }
 
 .btn-block {
+    width: 100%;
     /* This element should use 100% of the width */
 }
 
 .btn {
+    padding: 8px;
+    text-decoration-color: white;
+    font-weight: bold;
+    border:1px lightgrey;
+    background-color: #0fb784;
+
     /* There must be a separation of 8px between the text and the border of this element */
     /* The text color of this element should be white and bold */
     /* The border of this element should be 1px, and its color should be light grey */
-    background-color: #0fb784;
+
 }
 
 .form-control {
+    border-bottom: 4px;
+    border-top: 4px;
+    padding: .5em;
+
     /* There must be 4px on top of the text and below the text of an input with this class */
     /* It should have a separation of .5em from elements on top of it and below it */
 
+
+    /*width: calc(100% - 8px);
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Calculate based on the padding of the `.btn` class */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: 100%;
+    width:calc( 100% - 8px);
 }
 
 
