--- a/css/login.css
+++ b/css/login.css
@@ -27,20 +27,21 @@ fieldset {
     /* Its background should be white */
     background-color: white;
     padding: 1em;
+    border: none;
 }
 
 .width-80 {
     width: 80%;
     text-align: center;
-    margin: auto;
+    margin: 0 auto;
     /* The element with this class should 80% of the width and it must be centered */
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
 }
 
 .form-group {
-   width: 100%;
-    padding-top: .5em ;
-    padding-bottom: .5em;
+    width: 100%;
+    margin-top: .5em ;
+    margin-bottom: .5em;
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
 }
@@ -59,7 +60,7 @@ fieldset {
     padding: 8px;
     text-decoration-color: white;
     font-weight: bold;
-    border:1px lightgrey;
+    border:1px lightgrey solid;
     background-color: #0fb784;
 
     /* There must be a separation of 8px between the text and the border of this element */
@@ -69,9 +70,10 @@ fieldset {
 }
 
 .form-control {
-    border-bottom: 4px;
-    border-top: 4px;
-    padding: .5em;
+   padding: 4px 0;
+    margin: .5em 0;
+    width: calc(100% - 40%);
+
 
     /* There must be 4px on top of the text and below the text of an input with this class */
     /* It should have a separation of .5em from elements on top of it and below it */
