--- a/css/messages.css
+++ b/css/messages.css
@@ -10,6 +10,7 @@ div{
     border: 1px grey solid;
     margin: .5em auto;
     padding: 10px;
+    width: 90%;
 }
 .message-info{
     background-color: steelblue;
