--- a/css/twitter.css
+++ b/css/twitter.css
@@ -39,12 +39,11 @@ a {
 
 }
 .nav-link {
-    display: inline-block;
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
-    display: inline-block;
-    padding: 1.5em;
+
+    padding: 0 1.5em;
     width: 100%;
 
 }
