--- a/css/twitter.css
+++ b/css/twitter.css
@@ -42,7 +42,7 @@ a {
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
-
+    display: inline-block;
     padding: 0 1.5em;
     width: 100%;
 
