--- a/css/twitter.css
+++ b/css/twitter.css
@@ -22,7 +22,7 @@ header {
     background-size: cover;
     min-height: 300px;
     padding-top: 275px;
-    z-index: 1000;
+
 }
 a {
     color: var(--link-color);
@@ -30,8 +30,12 @@ a {
 }
 .top-nav {
     background: var(--light-bg);
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
 
 }
+
 .nav {
     list-style-type: none;
     padding: 0;
@@ -42,9 +46,8 @@ a {
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
-    display: inline-block;
     padding: 0 1.5em;
-    width: 100%;
+
 
 }
 .nav-link:hover {
@@ -52,6 +55,7 @@ a {
 }
 .profile {
     background: var(--light-bg);
+    height: 80px;
 }
 .btn {
     border: 1px solid var(--main-link-color);
@@ -80,26 +84,30 @@ a {
     position: absolute;
     right: 0;
     width: 100px;
-    heigth: 80px;
     left: 20px;
     z-index: auto;
     top: 15em;
 
 }
+.profile-form{
+    float: right;
+    line-height: 80px;
+
+}
 .profile-details{
-    width: 25%;
+    width: calc(25% - 1em);
     margin: 0 0 .5em ;
     float: left;
     padding: 20px;
 
 }
 .timeline{
-    width: 50%;
+    width: calc(50% - 1em);
     margin: 0 0 .5em;
     float: left;
 }
 .who-to-follow{
-    width: 25%;
+    width: calc( 25% - 1em);
     margin: 0 0 .5em ;
     float: right;
     padding: 20px;
@@ -109,11 +117,12 @@ a {
 }
 .nav li{
     display: inline-block;
+    padding: 1.5em;
 }
 .media{
     width: 100%;
     background-color:whitesmoke;
-    border-bottom: 1px steelblue;
+    border-bottom: 1px solid steelblue;
     padding: .5em;
     overflow: auto;
 }
@@ -124,9 +133,16 @@ a {
 }
 .media-body{
     float: left;
-    width: 100%;
+    width: calc(100% - 50px);
 }
 .profile-items{
     margin: .5em;
 
+}
+.text-right{
+    text-align: right;
+}
+.img-circle{
+    border-radius: 100%;
+    border: 4px solid var(--light-bg);
 }
