--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -17,12 +17,15 @@ h2, h3 {
 .container {
     margin: 0 auto;
     width: 80%;
+    padding: 10px;
+
 }
 
 .green-box {
     background: green;
     height: 1em;
     width: 2em;
+
 }
 
 .border {border: 2px solid black;}
@@ -33,53 +36,85 @@ h2, h3 {
     background: white;
     padding: 1em;
     margin: 0 auto;
-    justify-content: space-around;
-    align-items: stretch;
-    flex-direction: row;
-    align-self: center;
+    display: flex;
+    flex-direction: column;
+
+
     /* enter needed declarations here */
 }
 
 section {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
     /* enter needed declarations here */
 }
 
 section:nth-of-type(1) {
     height: 3em;
     background: lightgreen;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
     /* enter needed declarations here */
+}
+#gbox{
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-start;
 }
 section:nth-of-type(1) div:last-child {
     /* enter needed declarations here */
+    display: flex;
+
+
 }
 
 .purple-box {
     background: fuchsia;
     width: 3em;
     height: 1em;
+
 }
 
 .purple-box:nth-of-type(1) {
     /* enter needed declarations here */
+    display: flex;
+    flex-grow: 2;
 }
 
 .purple-box:nth-of-type(2) {
     /* enter needed declarations here */
+    display: flex;
+    flex-grow: 1;
+
 }
+
 
 .blue-box {
     width: 100%;
     background: blue;
     height: 10em;
+
+
 }
 
 section:nth-of-type(3) {
     /* enter needed declarations here */
+   display: flex;
+   align-content: baseline;
+    padding: 10px;
+
 }
 
 section:nth-of-type(3) h3 {
     /* enter needed declarations here */
-
+    display: flex;
+    flex-grow: 2;
+    padding: 10px;
 }
 
 .orange-circle {
@@ -94,6 +129,8 @@ section:nth-of-type(3) h3 {
     height: 5em;
     width: 5em;
     background: brown;
+    display: flex;
+    flex-grow: 2;
     /* enter needed declarations here */
 }
 
@@ -102,6 +139,9 @@ section:nth-of-type(3) h3 {
 }
 
 section:nth-of-type(5) {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     /* enter needed declarations here */
 }
 
@@ -109,11 +149,17 @@ section:nth-of-type(5) {
     background: yellow;
     width: 2em;
     height: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 section:nth-of-type(6) {
     background: coral;
     height: 14em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     /* enter needed declarations here */
 }
 
