--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -23,14 +23,24 @@ body {
 .cover {
     height: 100vh;
     width: 100%;
+   display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
     /* TODO: add a flex container to this selector */
 }
+
 
 .flex-form {
     z-index: 10;
     position: relative;
     border: 20px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+
     /* TODO: Add an automatic margin and a flex container to this selector */
 }
 
@@ -43,6 +53,8 @@ body {
     border-radius: 0;
     outline: 0;
     -webkit-appearance: none;
+
+
 }
 
 .btn-primary {
@@ -50,10 +62,14 @@ body {
     border-top: 1px solid #b4d455;
     border-bottom: 1px solid #b4d455;
     color: white;
+    display: flex;
+
 }
 
 .destination {
     /* TODO:
         Add an explicit size for items along the main axis of 15em.
         Read more about Flex Basis: https://java.codeup.com/appendix/further-reading/html-css/flexbox-additional-concepts/#flex-basis */
+
+
 }
