--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -105,17 +105,14 @@ section:nth-of-type(1) div:last-child {
 
 section:nth-of-type(3) {
     /* enter needed declarations here */
-   display: flex;
-   align-content: baseline;
-    padding: 10px;
+  align-items: center;
 
 }
 
 section:nth-of-type(3) h3 {
     /* enter needed declarations here */
-    display: flex;
     flex-grow: 2;
-    padding: 10px;
+
 }
 
 .orange-circle {
