--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -24,10 +24,7 @@ body {
     height: 100vh;
     width: 100%;
    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-content: center;
+
     /* TODO: add a flex container to this selector */
 }
 
@@ -62,11 +59,12 @@ body {
     border-top: 1px solid #b4d455;
     border-bottom: 1px solid #b4d455;
     color: white;
-    display: flex;
+
 
 }
 
 .destination {
+   flex-basis: 15em
     /* TODO:
         Add an explicit size for items along the main axis of 15em.
         Read more about Flex Basis: https://java.codeup.com/appendix/further-reading/html-css/flexbox-additional-concepts/#flex-basis */
