--- a/css/twitter.css
+++ b/css/twitter.css
@@ -96,7 +96,7 @@ a {
 }
 .profile-details{
     width: calc(25% - 1em);
-    margin: 0 0 .5em ;
+    margin: 0 .5em ;
     float: left;
     padding: 20px;
 
@@ -108,7 +108,7 @@ a {
 }
 .who-to-follow{
     width: calc( 25% - 1em);
-    margin: 0 0 .5em ;
+    margin: 0 .5em ;
     float: right;
     padding: 20px;
 }
